<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
        android:id="@+id/menu_back"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_below="@+id/menu_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/basicInfoLayout"
        android:layout_marginTop="@dimen/margin_big"
        android:layout_marginLeft="@dimen/margin_big"
        android:layout_marginRight="@dimen/margin_big">

        <ImageView
            android:layout_width="@dimen/resident_image"
            android:layout_height="match_parent"
            android:id="@+id/residentImage"
            android:clickable="false"
            android:src="@drawable/no_image_available"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/infoValuesLayout">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/empty_value"
                    android:id="@+id/residentName"
                    style="@style/resident_name_list"/>

                <LinearLayout
                    android:layout_marginTop="@dimen/margin_small"
                    style="@style/basic_info"
                    android:id="@+id/genderLayout">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/gender_label"
                        android:id="@+id/genderLabel"
                        style="@style/label"
                        android:gravity="center_vertical"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/empty_value"
                        android:id="@+id/genderValue"
                        android:layout_marginLeft="@dimen/margin_small"
                        style="@style/value_small"
                        android:gravity="center_vertical"/>
                </LinearLayout>

                <LinearLayout
                    style="@style/basic_info"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/birthYearLayout">

                    <TextView
                        style="@style/label"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/birth_year_label"
                        android:id="@+id/birthYearLabel"
                        android:gravity="center_vertical"/>

                    <TextView
                        style="@style/value_small"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/empty_value"
                        android:id="@+id/birthYearValue"
                        android:layout_marginLeft="@dimen/margin_small"
                        android:gravity="center_vertical"/>
                </LinearLayout>

                <LinearLayout
                    style="@style/basic_info"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/homeworldLayout">

                    <TextView
                        style="@style/label"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/homeworld_label"
                        android:id="@+id/homeworldLabel"
                        android:gravity="center_vertical"/>

                    <TextView
                        style="@style/value_small"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/empty_value"
                        android:id="@+id/homeworldValue"
                        android:layout_marginLeft="@dimen/margin_small"
                        android:gravity="center_vertical"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        style="@style/value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_big"
        android:layout_centerHorizontal="true"
        android:text="@string/other_data_label"
        android:layout_below="@+id/basicInfoLayout"
        android:id="@+id/otherDataLabel"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_big"
        android:layout_marginLeft="@dimen/margin_big"
        android:layout_below="@+id/otherDataLabel">

        <TableRow style="@style/basic_info"
                  android:layout_width="match_parent">
            <TextView
                android:text="@string/height_label"
                android:padding="@dimen/padding"
                style="@style/label"
                android:id="@+id/heightLabel"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_column="1"
                />
            <TextView
                android:padding="@dimen/padding"
                style="@style/value_small"
                android:id="@+id/heightValue"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/empty_value"/>
        </TableRow>

        <TableRow
            style="@style/basic_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/label"
                android:layout_column="1"
                android:text="@string/mass_label"
                android:padding="@dimen/padding"
                android:id="@+id/massLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                style="@style/value_small"
                android:text="@string/empty_value"
                android:padding="@dimen/padding"
                android:id="@+id/massValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
        </TableRow>

        <TableRow
            style="@style/basic_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/label"
                android:layout_column="1"
                android:text="@string/hair_color_label"
                android:padding="@dimen/padding"
                android:id="@+id/hairColorLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                style="@style/value_small"
                android:text="@string/empty_value"
                android:padding="@dimen/padding"
                android:id="@+id/hairColorValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow
            style="@style/basic_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/label"
                android:layout_column="1"
                android:text="@string/skin_color_label"
                android:padding="@dimen/padding"
                android:id="@+id/skinColorLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                style="@style/value_small"
                android:text="@string/empty_value"
                android:padding="@dimen/padding"
                android:id="@+id/skinColorValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow
            style="@style/basic_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/label"
                android:layout_column="1"
                android:text="@string/eye_color_label"
                android:padding="@dimen/padding"
                android:id="@+id/eyeColorLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                style="@style/value_small"
                android:text="@string/empty_value"
                android:padding="@dimen/padding"
                android:id="@+id/eyeColorValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow
            style="@style/basic_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/label"
                android:layout_column="1"
                android:text="@string/created_label"
                android:padding="@dimen/padding"
                android:id="@+id/createdLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                style="@style/value_small"
                android:text="@string/empty_value"
                android:padding="@dimen/padding"
                android:id="@+id/createdValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow
            style="@style/basic_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/label"
                android:layout_column="1"
                android:text="@string/edited_label"
                android:padding="@dimen/padding"
                android:id="@+id/editedLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                style="@style/value_small"
                android:text="@string/empty_value"
                android:padding="@dimen/padding"
                android:id="@+id/editedValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </TableRow>

    </TableLayout>

</RelativeLayout>